--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+title: Ian Cooper
+description: This is Ian's web site.
+show_downloads: false
+google_analytics: # nothing
