--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 theme: jekyll-theme-minimal
 title: Ian Cooper
-description: This is Ian's web site.
+description: false
+logo: /assets/img/logo.png
+repository: icooper/icooper.github.io
 show_downloads: false
-google_analytics: # nothing
+google_analytics: false
