--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            'Ian Cooper'
-description:      'stuff'
-url:              http://ianc.blog
-repository:       icooper/icooper.github.io
-paginate:         5
+title: Ian Cooper
+description: Ian's Blog
+url: http://ianc.blog
+repository: icooper/icooper.github.io
+paginate: 5
