--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "url": "git+https://github.com/icooper/icooper.github.io.git"
   },
   "author": "Ian Cooper",
-  "license": "ISC",
+  "license": "CC-BY-SA",
   "homepage": "https://ianc.blog"
 }
