--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,9 +2,4 @@ title: Ian Cooper
 description: Ian's Blog
 url: http://ianc.blog
 repository: icooper/icooper.github.io
-paginate: 5
-
-markdown: kramdown
-kramdown:
-  syntax_highlighter_opts:
-    disable: true
+markdown: GFM
